--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,13 @@
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
     "px2rem": "^0.5.0",
+    "vonic": "^1.1.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
